--- a/product.html
+++ b/product.html
@@ -122,9 +122,13 @@
 <section id="nvidia-pipeline">
 <section class="features-section" style="margin-top: 3rem;">
     <div class="features-container">
-        <div class="u-center-text">
+        <!-- New Flexbox Container for Text and Badge -->
+        <div class="u-center-text" style="display: flex; justify-content: center; align-items: center; gap: 1rem;">
+            <!-- "Powered by NVIDIA" Text -->
             <h2 class="heading-secondary">Powered by NVIDIA</h2>
-        </div>
+            <!-- NVIDIA Inception Program Badge -->
+            <img src="img/nvidia-inception-program-badge.png" alt="NVIDIA Inception Program Badge" class
+
         <p class="paragraph u-center-text">
             From enterprise log ingestion to large-scale pretraining and real-time inference,
             our Tempo LogLM harnesses the NVIDIA software stack to deliver unparalleled
