--- a/product.html
+++ b/product.html
@@ -122,12 +122,9 @@
 <section id="nvidia-pipeline">
 <section class="features-section" style="margin-top: 3rem;">
     <div class="features-container">
-        <!-- New Flexbox Container for Text and Badge -->
-        <div class="u-center-text" style="display: flex; justify-content: center; align-items: center; gap: 1rem;">
-            <!-- "Powered by NVIDIA" Text -->
+        <div class="u-center-text">
             <h2 class="heading-secondary">Powered by NVIDIA</h2>
-            <!-- NVIDIA Inception Program Badge -->
-            <img src="img/nvidia-inception-program-badge.png" alt="NVIDIA Inception Program Badge" class
+        </div>
 
         <p class="paragraph u-center-text">
             From enterprise log ingestion to large-scale pretraining and real-time inference,
