--- a/product.html
+++ b/product.html
@@ -117,15 +117,15 @@
             <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo?search=deep%20tempo" target="_blank" class="cta-button">Try Now on Snowflake Marketplace</a>
         </section>
 
-<section id="nvidia-pipeline">
+<section id="nvidia-deeptempo">
     <section class="features-section" style="margin-top: 3rem;">
         <div class="features-container">
-            <!-- Flexbox Container for 'Powered by NVIDIA' text and Inception Badge -->
-            <div class="u-center-text" style="display: flex; justify-content: center; align-items: center; gap: 1.5rem; margin-bottom: 2rem;">
-                <!-- 'Powered by NVIDIA' Text -->
+            <!-- Flexbox container for "Powered by NVIDIA" text and Inception Badge -->
+            <div class="u-center-text" style="display: flex; justify-content: center; align-items: center; gap: 1rem; margin-bottom: 2rem;">
+                <!-- "Powered by NVIDIA" Text -->
                 <h2 class="heading-secondary">Powered by NVIDIA</h2>
-                <!-- NVIDIA Inception Program Badge -->
-                <img src="img/nvidia-inception-program-badge.png" alt="NVIDIA Inception Program Badge" class="footer-cert-logo" style="width: 200px;">
+                <!-- NVIDIA Inception Program Badge (with correct size) -->
+                <img src="img/nvidia-inception-program-badge.png" alt="NVIDIA Inception Program Badge" class="footer-cert-logo" style="height: 50px; width: auto;">
             </div>
 
             <!-- Introductory Paragraph about the NVIDIA-Powered Pipeline -->
@@ -194,6 +194,7 @@
         </div>
     </section>
 </section>
+
 
 
 <!-- ================= End of NVIDIA-Powered Pipeline Section ================= -->
