--- a/test.html
+++ b/test.html
@@ -56,22 +56,40 @@
                         <div class="hero-section-content">
                             <h1 class="hero-title">DeepTempo Enhances Cybersecurity with Fine-Tuning and MITRE Mapping</h1>
                             <p class="hero-subtitle">Deep learning-powered solution boosts threat detection accuracy and cuts response times, showcasing the strength of the Snowflake Native App Framework.</p>
-                            <p class="intro-text paragraph">DeepTempo has introduced new capabilities for Tempo, its cutting-edge cybersecurity solution available on the Snowflake Marketplace. With improved fine-tuning, MITRE mapping integration, and seamless compatibility with existing SIEM systems, Tempo enhances threat detection and response efficiency.</p>
+                            <p class="intro-text">Discover how DeepTempo's innovative cybersecurity solution integrates with existing systems to enhance protection and operational efficiency.</p>
                         </div>
-
-                        <div class="content">
-                            <p class="paragraph">“This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo. Through the Snowflake Native App Framework and the capabilities of Snowflake Cortex AI, we can deliver improved protection to our users in a quicker and more cost-effective way,” stated Evan Powell, founder and CEO of DeepTempo.</p>
-                            <p class="paragraph">Tempo’s fine-tuning capabilities enable organizations to tailor models to their environments, increasing accuracy in threat detection. The solution operates upstream from a customer’s existing SIEM, integrating enriched data seamlessly into current workflows. Users pay from their Snowflake account, ensuring Tempo runs within their environment.</p>
-                            <p class="paragraph">Prasanna Krishnan, head of collaboration and horizon at Snowflake, remarked, “The progress of DeepTempo in deploying advanced deep learning solutions for cybersecurity embodies the innovation we envisioned with the Snowflake Native App Framework.”</p>
-                            <p class="paragraph">Security teams can respond to cyber attacks with unprecedented speed using Tempo's MITRE ATT&CK flagged alerts. This integration significantly reduces mean time to respond (MTTR), saving critical time during active threats.</p>
-                            <p class="paragraph">Using network and cloud flow logs, Tempo identifies threats like reconnaissance and data exfiltration. It tags sequences with MITRE ATT&CK techniques, embedding this information in compact representations to enhance analytics efficiency and reduce log storage costs.</p>
-
-                            <h2>About DeepTempo</h2>
-                            <p class="paragraph">DeepTempo provides deep-learning-based cybersecurity solutions to protect enterprises from cyber attacks. Available on the Snowflake Native App Marketplace, DeepTempo's solutions help optimize security spending and operational efficiency. Learn more at <a href="https://www.deeptempo.ai" target="_blank">DeepTempo's website</a> or follow them on <a href="https://www.linkedin.com/company/deeptempo/" target="_blank">LinkedIn</a>, <a href="https://www.youtube.com/channel/UCdeTpo" target="_blank">YouTube</a>, and <a href="https://medium.com/@deeptempo" target="_blank">Medium</a>.</p>
-
-                            <p class="paragraph">For further details, read the <a href="https://www.businesswire.com/news/home/20250225005555/en/DeepTempo-Enhances-Cybersecurity-with-Fine-Tuning-and-MITRE-Mapping" target="_blank">original article</a> on Business Wire.</p>
-
-                            <p class="paragraph call-to-action">Stay ahead in cybersecurity with DeepTempo's innovative solutions. <a href="https://www.deeptempo.ai/contact" target="_blank">Contact us</a> today to enhance your threat detection and response capabilities.</p>
+                    </section>
+                    <section class="section-content">
+                        <div class="intro-container">
+                            <p style="font-size: 2.2rem; line-height: 1.7;">
+                                DeepTempo today announced exciting new capabilities for Tempo, its deep learning-powered cybersecurity solution on the Snowflake Marketplace. With advanced fine-tuning, MITRE mapping integration, and seamless compatibility with existing SIEM systems, Tempo offers enhanced context and actionable insights for security teams. 
+                            </p>
+                        </div>
+                        <div class="intro-container">
+                            <p class="paragraph">
+                                “This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo,” said Evan Powell, founder and CEO, DeepTempo. Leveraging the Snowflake Native App Framework and Snowflake Cortex AI, DeepTempo delivers improved protection quickly and cost-effectively.
+                            </p>
+                            <p class="paragraph">
+                                Tempo's fine-tuning capabilities allow organizations to adapt models to their specific environments, ensuring greater accuracy in threat detection. Users benefit from enhanced protection and threat isolation, paying directly from their Snowflake account. Tempo operates within their environment, seamlessly flowing enriched data into existing workflows.
+                            </p>
+                            <p class="paragraph">
+                                Prasanna Krishnan, head of collaboration and horizon at Snowflake, notes, “DeepTempo's rapid progress in deploying advanced deep learning solutions is the innovation we envisioned with the Snowflake Native App Framework.” By bringing capabilities directly to customers' Snowflake accounts, data movement is minimized, and time to value is significantly reduced.
+                            </p>
+                            <p class="paragraph">
+                                Security teams with predefined response plans can now react with unprecedented speed using Tempo’s MITRE ATT&CK flagged alerts, which integrate seamlessly into SIEM platforms. This integration reduces mean time to respond (MTTR) and has proven to save critical time during active threats.
+                            </p>
+                            <p class="paragraph">
+                                Using only network and cloud flow logs, Tempo identifies common attacks such as reconnaissance, lateral movement, and data exfiltration. It automatically tags sequences with the closest MITRE ATT&CK techniques, embedding vital information in compact representations for efficient analytics and reduced log storage costs.
+                            </p>
+                            <p class="paragraph">
+                                DeepTempo provides deep-learning-based cybersecurity solutions that protect enterprises from cyber attacks, available on the Snowflake Native App Marketplace and for on-premise deployment. To learn more, visit <a href="https://www.deeptempo.ai">DeepTempo's website</a> or follow them on <a href="https://www.linkedin.com/company/deeptempo">LinkedIn</a>, <a href="https://www.youtube.com/channel/DeepTempo">YouTube</a>, and <a href="https://medium.com/@deeptempo">Medium</a>.
+                            </p>
+                            <p class="paragraph">
+                                <a href="https://www.businesswire.com/news/home/20250225005555/en/DeepTempo-Enhances-Cybersecurity-with-Fine-Tuning-and-MITRE-Mapping">Read the full article on Business Wire</a> for more details.
+                            </p>
+                            <p class="paragraph">
+                                <strong>Take Action:</strong> Enhance your cybersecurity infrastructure with DeepTempo's cutting-edge solutions. <a href="https://www.deeptempo.ai/contact">Contact us</a> today to learn more.
+                            </p>
                         </div>
                     </section>
         <footer class="footer">
