--- a/MiterAndFineTune.html
+++ b/MiterAndFineTune.html
@@ -170,68 +170,58 @@
                 <div class="navbar__close" id="close-menu">&times;</div>
             </nav>
         </header>
-        ```html
-<section class="hero-section">
-    <div class="hero-section-content">
-        <h1 class="hero-title">DeepTempo Enhances Cybersecurity with Fine-Tuning and MITRE Mapping</h1>
-        <p class="hero-subtitle">Discover how DeepTempo's deep learning-powered solution boosts threat detection accuracy and cuts response times, showcasing the strength of the Snowflake Native App Framework.</p>
-    </div>
-</section>
+                                <!-- Hero Section with Consistent Styling -->
+                        <section class="hero-section">
+                            <div class="hero-section-content">
+                                <h1 class="hero-title">DeepTempo Enhances Cybersecurity with Fine-Tuning and MITRE Mapping</h1>
+                                <p class="hero-subtitle">Deep learning-powered solution boosts threat detection accuracy and cuts response times, showcasing the strength of the Snowflake Native App Framework.</p>
+                            </div>
+                        </section>
 
-<section class="section-content">
-    <div class="intro-container">
-        <p style="font-size: 2.2rem; line-height: 1.7;">
-            DeepTempo, a leader in cybersecurity solutions, has announced significant enhancements to Tempo, its deep learning-powered application available on the Snowflake Marketplace. With new features like fine-tuning and MITRE mapping integration, 
-            <span style="color: #ff2702; font-weight: 600;">Tempo</span>
-            now offers improved threat detection accuracy and seamless compatibility with existing SIEM systems.
-        </p>
-    </div>
-</section>
+                        <!-- Introduction Section with Proper Styling -->
+                        <section class="section-content">
+                            <div class="intro-container">
+                                <p style="font-size: 2.2rem; line-height: 1.7;">
+                                    In a significant advancement for cybersecurity, DeepTempo unveils new capabilities for its innovative solution, Tempo. With 
+                                    <span style="color: #ff2702; font-weight: 600;">enhanced fine-tuning</span>, MITRE mapping integration, and compatibility with SIEM systems, Tempo is set to revolutionize threat detection and response.
+                                </p>
+                            </div>
+                        </section>
 
-<section class="section-content">
-    <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">Tempo's New Capabilities</h2>
-    <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
-        With enhanced fine-tuning, Tempo can map detected anomalies to their most likely MITRE ATT&CK sequences, offering actionable insights that enrich existing SIEM workflows. This integration helps reduce mean time to respond (MTTR) and enhances the overall security posture of organizations.
-    </p>
-</section>
+                        <!-- Main Content Section with Consistent Formatting -->
+                        <section class="section-content">
+                            <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">Revolutionizing Cybersecurity with Deep Learning</h2>
+                            <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
+                                Tempo by DeepTempo leverages deep learning to optimize threat detection and streamline security operations by mapping anomalies to MITRE ATT&CK sequences, ensuring enhanced context and actionable insights.
+                            </p>
+                            <p class="paragraph">
+                                Tempo's integration with Snowflake's Native App Framework allows for seamless operation within existing environments, ensuring that security teams can continue utilizing their current SIEM systems while benefiting from Tempo's enriched data and insights. This integration not only improves threat detection accuracy but also significantly reduces response times, effectively cutting down mean time to respond (MTTR).
+                            </p>
+                            <p class="paragraph">
+                                According to Evan Powell, CEO of DeepTempo, "Tempo operates upstream from a customer’s existing SIEM, meaning that all enriched data and insights flow seamlessly into current workflows. This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo."
+                            </p>
+                            <p class="paragraph">
+                                The fine-tuning capabilities of Tempo allow organizations to adapt models to their specific environments, ensuring greater accuracy and relevance in detecting threats. This ensures that users only pay for the protection they need, directly from their Snowflake account, allowing Tempo to run efficiently within their setup.
+                            </p>
+                            <p class="paragraph">
+                                Prasanna Krishnan, head of collaboration at Snowflake, emphasized the importance of such innovations, stating, "The rapid progress of DeepTempo in deploying advanced deep learning-based solutions for cybersecurity is exactly the sort of innovation we envisioned when we built the Snowflake Native App Framework."
+                            </p>
+                            <p class="paragraph">
+                                With the ability to identify common attack strategies and automatically tag sequences with MITRE ATT&CK techniques, Tempo drastically reduces the need for data movement and storage, offering a cost-effective and efficient solution for threat analytics.
+                            </p>
+                            <p class="paragraph">
+                                For more information about DeepTempo and their cybersecurity solutions, visit their <a href="https://www.deeptempo.ai">website</a>, or follow them on <a href="https://www.linkedin.com/company/deeptempo">LinkedIn</a>, <a href="https://www.youtube.com/deeptempo">YouTube</a>, and <a href="https://medium.com/@deeptempo">Medium</a>.
+                            </p>
+                        </section>
 
-<section class="section-content model-criteria-section">
-    <div style="display: flex; flex-wrap: wrap; align-items: center;">
-        <div style="flex: 1; padding: 2rem; min-width: 300px;">
-            <h2 style="font-size: 3.5rem; margin-bottom: 2rem; text-align: left;">Advanced Threat Detection</h2>
-            <p style="font-size: 1.5rem; line-height: 1.5; text-align: left;">
-                Tempo operates upstream from existing SIEM systems, meaning all enriched data flows seamlessly into current workflows. This ensures security teams can leverage enhanced intelligence provided by DeepTempo, reducing data movement and dramatically decreasing time to value.
-            </p>
-            <ul style="font-size: 1.5rem; line-height: 1.5; text-align: left; list-style: disc inside; margin-top: 1rem;">
-                <li>
-                    <span style="color: #ff2702; font-weight: 600;">Fine-Tuning:</span> Adapts models to specific environments for improved accuracy.
-                </li>
-                <li>
-                    <span style="color: #ff2702; font-weight: 600;">MITRE Mapping:</span> Streamlines threat response with flagged alerts.
-                </li>
-                <li>
-                    <span style="color: #ff2702; font-weight: 600;">Efficient Analytics:</span> Embeddings reduce log storage and analysis costs.
-                </li>
-            </ul>
-        </div>
-        <div style="flex: 1; min-width: 300px; padding: 2rem; display: flex; justify-content: center; align-items: center;">
-            <img src="cybersecurity-image.jpg" alt="Cybersecurity solution illustration" style="max-width: 100%; height: auto;">
-        </div>
-    </div>
-</section>
-
-<section class="section-content">
-    <p class="paragraph">
-        DeepTempo’s solutions are also available for on-premise deployment, allowing organizations to optimize security spending while maintaining robust threat protection. To learn more about how DeepTempo can enhance your cybersecurity strategy, visit the <a href="https://www.deeptempo.ai" target="_blank">DeepTempo website</a>.
-    </p>
-</section>
-
-<section class="section-content">
-    <p class="paragraph">
-        Interested in staying updated with the latest in cybersecurity? Connect with us on <a href="https://www.linkedin.com/company/deeptempo" target="_blank">LinkedIn</a>, watch our <a href="https://www.youtube.com/channel/deeptempo" target="_blank">YouTube channel</a>, or read our insights on <a href="https://medium.com/@deeptempo" target="_blank">Medium</a>.
-    </p>
-</section>
-```
+                        <!-- Call to Action -->
+                        <section class="section-content">
+                            <div class="intro-container">
+                                <p style="font-size: 2.2rem; line-height: 1.7;">
+                                    Ready to enhance your cybersecurity strategy? <a href="https://www.deeptempo.ai/contact">Contact DeepTempo</a> today to learn more about how Tempo can protect your organization from cyber threats.
+                                </p>
+                            </div>
+                        </section>
         <footer class="footer">
             <div class="row">
                 <div class="col-1-of-2">
