--- a/MiterAndFineTune.html
+++ b/MiterAndFineTune.html
@@ -170,58 +170,63 @@
                 <div class="navbar__close" id="close-menu">&times;</div>
             </nav>
         </header>
-                                <!-- Hero Section with Consistent Styling -->
-                        <section class="hero-section">
-                            <div class="hero-section-content">
-                                <h1 class="hero-title">DeepTempo Enhances Cybersecurity with Fine-Tuning and MITRE Mapping</h1>
-                                <p class="hero-subtitle">Deep learning-powered solution boosts threat detection accuracy and cuts response times, showcasing the strength of the Snowflake Native App Framework.</p>
-                            </div>
-                        </section>
+        ```html
+                    <!-- Hero Section with Consistent Styling -->
+                    <section class="hero-section">
+                        <div class="hero-section-content">
+                            <h1 class="hero-title">DeepTempo Enhances Cybersecurity with Fine-Tuning and MITRE Mapping</h1>
+                            <p class="hero-subtitle">Deep learning-powered solution boosts threat detection accuracy and cuts response times, showcasing the strength of the Snowflake Native App Framework</p>
+                        </div>
+                    </section>
 
-                        <!-- Introduction Section with Proper Styling -->
-                        <section class="section-content">
-                            <div class="intro-container">
-                                <p style="font-size: 2.2rem; line-height: 1.7;">
-                                    In a significant advancement for cybersecurity, DeepTempo unveils new capabilities for its innovative solution, Tempo. With 
-                                    <span style="color: #ff2702; font-weight: 600;">enhanced fine-tuning</span>, MITRE mapping integration, and compatibility with SIEM systems, Tempo is set to revolutionize threat detection and response.
-                                </p>
-                            </div>
-                        </section>
+                    <!-- Introduction Section with Proper Styling -->
+                    <section class="section-content">
+                        <div class="intro-container">
+                            <p style="font-size: 2.2rem; line-height: 1.7;">
+                                February 25, 2025 08:05 AM Eastern Standard Time
+                                <span style="color: #ff2702; font-weight: 600;">PALO ALTO, Calif.--(BUSINESS WIRE)--</span>
+                                DeepTempo today announced new capabilities for Tempo, its deep learning-powered cybersecurity solution available as a Snowflake Native App on the Snowflake Marketplace. With enhanced fine-tuning, MITRE mapping integration, and seamless compatibility with existing SIEM systems, Tempo can map detected anomalies to their most likely MITRE ATT&CK sequences, providing enhanced context and actionable insights.
+                            </p>
+                        </div>
+                    </section>
 
-                        <!-- Main Content Section with Consistent Formatting -->
-                        <section class="section-content">
-                            <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">Revolutionizing Cybersecurity with Deep Learning</h2>
-                            <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
-                                Tempo by DeepTempo leverages deep learning to optimize threat detection and streamline security operations by mapping anomalies to MITRE ATT&CK sequences, ensuring enhanced context and actionable insights.
-                            </p>
-                            <p class="paragraph">
-                                Tempo's integration with Snowflake's Native App Framework allows for seamless operation within existing environments, ensuring that security teams can continue utilizing their current SIEM systems while benefiting from Tempo's enriched data and insights. This integration not only improves threat detection accuracy but also significantly reduces response times, effectively cutting down mean time to respond (MTTR).
-                            </p>
-                            <p class="paragraph">
-                                According to Evan Powell, CEO of DeepTempo, "Tempo operates upstream from a customer’s existing SIEM, meaning that all enriched data and insights flow seamlessly into current workflows. This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo."
-                            </p>
-                            <p class="paragraph">
-                                The fine-tuning capabilities of Tempo allow organizations to adapt models to their specific environments, ensuring greater accuracy and relevance in detecting threats. This ensures that users only pay for the protection they need, directly from their Snowflake account, allowing Tempo to run efficiently within their setup.
-                            </p>
-                            <p class="paragraph">
-                                Prasanna Krishnan, head of collaboration at Snowflake, emphasized the importance of such innovations, stating, "The rapid progress of DeepTempo in deploying advanced deep learning-based solutions for cybersecurity is exactly the sort of innovation we envisioned when we built the Snowflake Native App Framework."
-                            </p>
-                            <p class="paragraph">
-                                With the ability to identify common attack strategies and automatically tag sequences with MITRE ATT&CK techniques, Tempo drastically reduces the need for data movement and storage, offering a cost-effective and efficient solution for threat analytics.
-                            </p>
-                            <p class="paragraph">
-                                For more information about DeepTempo and their cybersecurity solutions, visit their <a href="https://www.deeptempo.ai">website</a>, or follow them on <a href="https://www.linkedin.com/company/deeptempo">LinkedIn</a>, <a href="https://www.youtube.com/deeptempo">YouTube</a>, and <a href="https://medium.com/@deeptempo">Medium</a>.
-                            </p>
-                        </section>
+                    <!-- Main Content Section with Consistent Formatting -->
+                    <section class="section-content">
+                        <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">DeepTempo's Capabilities</h2>
+                        <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
+                            “This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo. Through the Snowflake Native App Framework and the capabilities of Snowflake Cortex AI, we can deliver improved protection to our users in a quicker and more cost-effective way.”
+                        </p>
+                        <p class="paragraph">
+                            Tempo’s fine-tuning capabilities allow organizations to adapt models to their specific environments with ease of use, ensuring greater accuracy and relevance in detecting threats. Users pay for the enhanced protection and threat isolation from their Snowflake account and Tempo runs within their environment.
+                        </p>
+                        <p class="paragraph">
+                            “The rapid progress of DeepTempo in deploying advanced deep learning based solutions for cybersecurity is exactly the sort of innovation we envisioned when we built the Snowflake Native App Framework,” said Prasanna Krishnan, head of collaboration and horizon, Snowflake. “By bringing deep learning and other capabilities to the data within their own Snowflake accounts, customers can limit costly data movement and dramatically reduce time to value.”
+                        </p>
+                        <p class="paragraph">
+                            Security teams with pre-established response plans for specific cyber attack methods can trigger their reactions with unprecedented speed and precision with Tempo’s MITRE ATT&CK flagged alerts seamlessly streaming into their existing SIEM platforms. This and other context significantly reduce mean time to respond (MTTR) and have been shown to save minutes or hours during active threats.
+                        </p>
+                        <p class="paragraph">
+                            Using only network and cloud flow logs, the model can identify whether reconnaissance, lateral movement, data exfiltration, or other common attacks are occurring. Tempo now automatically tags all stored sequences with the closest MITRE ATT&CK techniques. Tempo also embeds this and other information in compact representations called embeddings, which are less than 1 percent the size of the original logs, enabling faster and more efficient analytics while reducing spending on log storage and analysis.
+                        </p>
+                    </section>
 
-                        <!-- Call to Action -->
-                        <section class="section-content">
-                            <div class="intro-container">
-                                <p style="font-size: 2.2rem; line-height: 1.7;">
-                                    Ready to enhance your cybersecurity strategy? <a href="https://www.deeptempo.ai/contact">Contact DeepTempo</a> today to learn more about how Tempo can protect your organization from cyber threats.
-                                </p>
-                            </div>
-                        </section>
+                    <!-- About Section -->
+                    <section class="section-content">
+                        <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">About DeepTempo</h2>
+                        <p class="paragraph">
+                            DeepTempo provides deep-learning-based cybersecurity solutions that protect enterprises and service providers from cyber attacks. Leveraging its foundation LogLMs, the company’s cybersecurity solutions are on the <a href="https://www.snowflake.com/data-marketplace/">Snowflake Native App Marketplace</a> and also available for deployment in on-premise security data lakes, helping organizations optimize security spending and enhance operational efficiency while maintaining robust threat protection without lock-ins. To find out more, go to <a href="https://www.deeptempo.ai">DeepTempo</a> or check out the company's <a href="https://www.linkedin.com/company/deeptempo">LinkedIn page</a>, <a href="https://www.youtube.com/channel/DeepTempo">YouTube channel</a>, and <a href="https://medium.com/@deeptempo">Medium posts</a>.
+                        </p>
+                    </section>
+
+                    <!-- Call to Action -->
+                    <section class="section-content">
+                        <div class="intro-container">
+                            <p style="font-size: 2.2rem; line-height: 1.7;">
+                                Discover how DeepTempo can enhance your cybersecurity strategy. <a href="https://www.deeptempo.ai/contact">Contact us today</a> to learn more.
+                            </p>
+                        </div>
+                    </section>
+```
         <footer class="footer">
             <div class="row">
                 <div class="col-1-of-2">
