--- a/MiterAndFineTune.html
+++ b/MiterAndFineTune.html
@@ -192,6 +192,7 @@
 
                     <!-- Main Content Section with Consistent Formatting -->
                     <section class="section-content">
+                        <div class="intro-container">
                         <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">DeepTempo's Capabilities</h2>
                         <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
                             “This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo. Through the Snowflake Native App Framework and the capabilities of Snowflake Cortex AI, we can deliver improved protection to our users in a quicker and more cost-effective way.”
@@ -208,14 +209,17 @@
                         <p class="paragraph">
                             Using only network and cloud flow logs, the model can identify whether reconnaissance, lateral movement, data exfiltration, or other common attacks are occurring. Tempo now automatically tags all stored sequences with the closest MITRE ATT&CK techniques. Tempo also embeds this and other information in compact representations called embeddings, which are less than 1 percent the size of the original logs, enabling faster and more efficient analytics while reducing spending on log storage and analysis.
                         </p>
+                        </div>    
                     </section>
 
                     <!-- About Section -->
                     <section class="section-content">
+                        <div class="intro-container">
                         <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">About DeepTempo</h2>
                         <p class="paragraph">
                             DeepTempo provides deep-learning-based cybersecurity solutions that protect enterprises and service providers from cyber attacks. Leveraging its foundation LogLMs, the company’s cybersecurity solutions are on the <a href="https://www.snowflake.com/data-marketplace/">Snowflake Native App Marketplace</a> and also available for deployment in on-premise security data lakes, helping organizations optimize security spending and enhance operational efficiency while maintaining robust threat protection without lock-ins. To find out more, go to <a href="https://www.deeptempo.ai">DeepTempo</a> or check out the company's <a href="https://www.linkedin.com/company/deeptempo">LinkedIn page</a>, <a href="https://www.youtube.com/channel/DeepTempo">YouTube channel</a>, and <a href="https://medium.com/@deeptempo">Medium posts</a>.
                         </p>
+                        </div>
                     </section>
 
                     <!-- Call to Action -->
