--- a/MiterAndFineTune.html
+++ b/MiterAndFineTune.html
@@ -195,7 +195,7 @@
                         <div class="intro-container">
                         <h2 style="text-align: center; font-size: 4rem; margin-bottom: 2rem;">DeepTempo's Capabilities</h2>
                         <p style="text-align: center; font-size: 2.2rem; margin-bottom: 3rem;">
-                            “This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo. Through the Snowflake Native App Framework and the capabilities of Snowflake Cortex AI, we can deliver improved protection to our users in a quicker and more cost-effective way.”
+                            “Tempo operates upstream from a customer’s existing SIEM, meaning that all enriched data and insights flow seamlessly into current workflows,” said Evan Powell, founder and CEO, DeepTempo. “This ensures that security teams can continue leveraging their SIEM while benefiting from the enhanced intelligence provided by DeepTempo. Through the Snowflake Native App Framework and the capabilities of Snowflake Cortex AI, we can deliver improved protection to our users in a quicker and more cost-effective way.”
                         </p>
                         <p class="paragraph">
                             Tempo’s fine-tuning capabilities allow organizations to adapt models to their specific environments with ease of use, ensuring greater accuracy and relevance in detecting threats. Users pay for the enhanced protection and threat isolation from their Snowflake account and Tempo runs within their environment.
