--- a/GTC.html
+++ b/GTC.html
@@ -209,6 +209,8 @@
                       </div>
                     </section>
 
+        <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+        <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
         <footer class="footer">
             <div class="row">
                 <div class="col-1-of-2">
