--- a/GTC.html
+++ b/GTC.html
@@ -208,9 +208,12 @@
                         </p>
                       </div>
                     </section>
-
-        <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
-        <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
+                    <section class="section-content">
+                      <div class="intro-container">
+                        <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
+                        <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
+                      </div>
+                    </section>
         <footer class="footer">
             <div class="row">
                 <div class="col-1-of-2">
