--- a/GTC.html
+++ b/GTC.html
@@ -211,12 +211,10 @@
                     <section class="section-content">
                       <div class="intro-container">
                           <h2 class="contest-title">Contest Details</h2>
-                            <p>If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
-                            <ol>
-                              <li>Go to the Tempo app on the Snowflake marketplace: <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo</a> and install the app.</li>
-                              <li>Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</li>
-                              <li>Submit a row from the output of Tempo that shows a malicious event being detected to the form below.</li>
-                            </ol>
+                            <p>1. If you don't already have a Snowflake trial account, make one. You will need to put in your credit card but don't worry there are free credits so you shouldn't need to spend any money as long as you spin everything down after.</p>
+                            <p>2. Go to the Tempo app on the Snowflake marketplace: <a href="https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo">https://app.snowflake.com/marketplace/listing/GZTYZOYXHP3/deeptempo-cybersecurity-tempo</a> and install the app.</p>
+                            <p>3. Complete the steps from the guide (grant permissions, launch app, initialize resources, run static inference, and perform deep dive analysis).</p>
+                            <p>4. Submit a row from the output of Tempo that shows a malicious event being detected to the form below.</p>
                         <script src="https://js.hsforms.net/forms/embed/48299015.js" defer></script>
                         <div class="hs-form-frame" data-region="na1" data-form-id="c82bb4fa-2a26-441b-a959-0038e721aa6e" data-portal-id="48299015"></div>
                       </div>
